position introduction, position relative, static, absolute, fixed, overlapping elements with z index

--- a/styles2.css
+++ b/styles2.css
@@ -2,7 +2,20 @@ body{
 	padding: 30px;
 	background-image: url('light-1282314_1920.jpg');
 	background-repeat: repeat-y;
-
+    min-height: 8000px;
+}
+nav{
+	border-bottom-width: 2px; 
+	border-bottom-color: #ccc;
+	border-bottom-style: solid; 
+	padding: 10px; 
+	margin-bottom: 15px; 
+	background-color: #fff; 
+	font-family: 'Shrikhand', cursive; 
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
 }
 
 /* mouse over link */
@@ -105,4 +118,42 @@ span{
 	width: 150px;
 	border: 1px solid red;
 	display: inline-block;
+}
+.position {
+	display: inline-block; 
+	border: 1px solid green; 
+	width: 60px; height: 60px;
+	background-color: white;
+}
+/*overlapping elements:*/
+.rel{
+	position: relative;
+	display: inline-block;
+	width: 100%;
+	height: 200px; 
+	border: 1px solid orange;
+	background-color: #fff;
+}
+.abs{
+	position: absolute;
+	display: inline-block;
+	width: 50px; 
+	height: 50px; 
+	border: 1px solid green;
+	background-color: pink;
+}
+
+.abs1{
+	z-index: 10;
+	/*like x and y axis, z is the axis for 3d dimension*/
+	/*can also have negative values*/
+}
+.abs2{
+	background-color:  red; 
+    color: #fff; 
+    border-color: red; 
+    top: 25px; 
+    left: 25px; 
+    z-index: 0;
+
 }
